--- a/app/renderer/setup.html
+++ b/app/renderer/setup.html
@@ -1,35 +1,60 @@
 <!doctype html>
-<html>
+<html lang="en">
   <head>
     <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover" />
     <title>CashMoo Setup</title>
     <meta http-equiv="Content-Security-Policy" content="default-src 'self'; script-src 'self'; connect-src 'self'; img-src 'self' data:; style-src 'self' 'unsafe-inline';" />
     <link rel="stylesheet" href="styles/globals.css" />
   </head>
 
   <body>
-    <h1>Welcome to CashMoo</h1>
-    <p>Complete the setup to start using the app.</p>
-    <form id="setupForm">
-      <div>
-        <label>User name</label>
-        <input id="setupUserName" type="text" maxlength="30" required placeholder="Your name" />
-      </div>
-      <div>
-        <label>Default currency</label>
-        <select id="setupCurrency" required></select>
-      </div>
-      <div>
-        <label>Date format</label>
-        <select id="setupDateFormat" required></select>
-      </div>
-      <div>
-        <label>Enable notifications</label>
-        <input id="setupNotifications" type="checkbox" checked />
-      </div>
-      <div id="setupError" style="color: red"></div>
-      <button type="submit">Continue</button>
-    </form>
+    <header>
+      <h1>Welcome to CashMoo</h1>
+      <p>Complete the setup to start using the app.</p>
+    </header>
+
+    <main>
+      <section>
+        <form id="setup-form">
+          <fieldset>
+            <legend>Initial Setup</legend>
+
+            <div class="form-group">
+              <label for="setup-user-name">User name</label>
+              <input id="setup-user-name" type="text" maxlength="30" required placeholder="Your name" />
+            </div>
+
+            <div class="form-group">
+              <label for="setup-currency">Default currency</label>
+              <select id="setup-currency" required></select>
+            </div>
+
+            <div class="form-group">
+              <label for="setup-date-format">Date format</label>
+              <select id="setup-date-format" required></select>
+            </div>
+
+            <div class="list">
+              <div class="list-item">
+                <div class="list-item-content">
+                  <div class="list-item-title">Enable notifications</div>
+                  <div class="list-item-subtitle">Get reminders for bills and financial goals</div>
+                </div>
+                <input id="setup-notifications" type="checkbox" checked />
+              </div>
+            </div>
+          </fieldset>
+
+          <div id="setup-error" style="color: var(--color-system-red); margin: var(--spacing-12) 0"></div>
+
+          <div class="form-actions">
+            <button type="submit" class="button-primary">Continue</button>
+          </div>
+        </form>
+      </section>
+    </main>
+
     <script src="renderer.js"></script>
   </body>
 </html>
